--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
-    "request": "~2.11.0"
+    "request": "~2.11.0",
+    "lodash": "~0.6.1",
+    "xml2json": "~0.2.4"
   },
   "devDependencies": {
     "mocha":  "~1.4.1",
-    "should": "~1.1.0",
+    "chai": "~1.2.0",
     "sinon": "~1.4.2"
   }
 }
