Now using SparkXML library for (most) of our XML parsing. Not using it for everything because some strict-Spark results are ambiguous. About Spark: http://wiki.open311.org/JSON_and_XML_Conversion

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "request": "~2.11.0",
     "lodash": "~0.6.1",
+    "sparkxml": "git://github.com/codeforamerica/node-sparkxml.git",
     "xml2json": "~0.2.4"
   },
   "devDependencies": {
