--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
-    "request": "~2.11.0",
-    "lodash": "~0.6.1",
-    "sparkxml": "git://github.com/codeforamerica/node-sparkxml.git",
-    "xml2json": "~0.2.4"
+    "request": "~2.27.0",
+    "lodash": "~2.4.0",
+    "sparkxml": "git://github.com/oiva/node-sparkxml.git",
+    "xml2json": "~0.3.2"
   },
   "devDependencies": {
     "mocha":  "~1.4.1",
